add hader sidebar and responsive

--- a/Modules/Front/Resources/assets/sass/_variables.scss
+++ b/Modules/Front/Resources/assets/sass/_variables.scss
@@ -28,6 +28,8 @@ $brand-light-color-2: #E3E3E3;  //box gray, button hover gray
 $brand-color-1 : #FFBA00; //orange
 $brand-font-1 :  'Roboto', sans-serif;
 
+
+
 //HEADER
 $header-logo-background-color : #fff;
 $header-right-part-background-color : #1B3A6A;
@@ -36,6 +38,10 @@ $header-right-part-text-color: #fff;
 //footer
 $footer-background-color : #A8A8A8;
 $footer-text-color: #fff;
+
+//SIDEBAR
+$sidebar-background-color : #E8E8E8;
+$sidebar-active-background-color : #F7F7F7;
 
 //separator
 $separator-line-color: rgba(42, 54, 73, 0.22);
