--- a/public/modules/front/css/app.css
+++ b/public/modules/front/css/app.css
@@ -10030,6 +10030,7 @@ footer p {
   position: relative;
   margin-left: 230px;
   padding: 15px;
+  overflow: hidden;
 }
 
 .content-wrapper.collapsed {
