element form and element file layout

--- a/Modules/Front/Resources/assets/sass/_variables.scss
+++ b/Modules/Front/Resources/assets/sass/_variables.scss
@@ -55,3 +55,9 @@ $login-border-color: #DBDBDB;
 $primary-color:#2A3649;
 //buttons for primary-btn, hover on other btn, hover on texts...
 $secondary-color:#E84B37;
+
+//Element file
+$element-file-border:#E0E0E0;
+
+//Element form
+$element-form-background: #fff;
