--- a/Modules/Front/Resources/assets/sass/app.scss
+++ b/Modules/Front/Resources/assets/sass/app.scss
@@ -27,6 +27,10 @@
 @import 'form';
 @import 'datepicker';
 @import 'login';
+@import 'elementFiles';
+@import 'elementForms';
+@import 'elementTables';
+
 
 //Extras
 
