--- a/public/modules/front/css/app.css
+++ b/public/modules/front/css/app.css
@@ -10553,6 +10553,101 @@ form.contact-form .checkbox {
   text-decoration: underline;
 }
 
+.element-file-container {
+  margin: 20px 0;
+}
+
+.element-file-container .element-file-container-head {
+  background-color: #E8E8E8;
+  font-size: 16px;
+  line-height: 21px;
+  font-weight: 400;
+  text-transform: uppercase;
+  padding: 10px 15px;
+}
+
+.element-file-container .element-file-container-body {
+  border: 1px solid #E0E0E0;
+  padding: 10px 20px;
+}
+
+.element-file-container .element-file-container-body .element-file-input-container {
+  padding: 7px 0px;
+  margin: 5px 0;
+  overflow: hidden;
+  border-bottom: 1px solid #E8E8E8;
+}
+
+.element-file-container .element-file-container-body .element-file-input-container .element-file-title {
+  font-size: 14px;
+  line-height: 19px;
+  font-weight: 600;
+  padding: 0;
+}
+
+.element-file-container .element-file-container-body .element-file-input-container .element-file-content {
+  font-size: 14px;
+  line-height: 19px;
+  font-weight: 400;
+  padding: 0;
+}
+
+.element-form-container {
+  margin: 20px 0;
+  background-color: #fff;
+  padding: 40px 20px;
+}
+
+.element-form-container .element-form-row {
+  margin: 15px 0;
+}
+
+.element-form-container .element-form-row label {
+  padding: 7px 0;
+}
+
+.element-form-container .element-form-row label span {
+  color: #E84B37;
+}
+
+.element-form-container .element-form-row .buttons {
+  margin-top: 20px;
+  padding-bottom: 20px;
+}
+
+.element-form-container .element-form-row .buttons .btn {
+  margin: 10px 0;
+}
+
+.element-form-container .element-form-row .buttons .btn-back {
+  border: 1px solid #2A3649;
+  border-bottom: 2px solid #2A3649;
+}
+
+.element-form-container .element-form-row .buttons .btn-back:hover {
+  background-color: #E8E8E8;
+  border-color: #E8E8E8;
+  color: #2A3649;
+}
+
+@media (min-width: 768px) {
+  .element-form-container .element-form-row label {
+    float: right;
+  }
+
+  .element-form-container .element-form-row .buttons {
+    margin-top: 40px;
+  }
+
+  .element-form-container .element-form-row .buttons .left {
+    float: left;
+  }
+
+  .element-form-container .element-form-row .buttons .right {
+    float: right;
+  }
+}
+
 .map-container .leaflet-container {
   height: 300px;
   width: 100%;
