element to redux finished

--- a/Modules/Architect/Resources/assets/sass/architect/app.scss
+++ b/Modules/Architect/Resources/assets/sass/architect/app.scss
@@ -9,7 +9,8 @@
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 //@import "node_modules/react-select/dist/react-select.css";
 @import '~leaflet/dist/leaflet.css';
-@import '~font-awesome/scss/font-awesome';
+//@import '~font-awesome/scss/font-awesome';
+@import "~@fortawesome/fontawesome-free/css/all.min.css";
 
 // Material Kit
 // https://www.creative-tim.com/product/material-kit
