--- a/Modules/Front/Resources/assets/sass/app.scss
+++ b/Modules/Front/Resources/assets/sass/app.scss
@@ -11,6 +11,8 @@
 @import "~bootstrap-sass/assets/stylesheets/bootstrap";
 //@import "~font-awesome/scss/font-awesome";
 
+@import "~@fortawesome/fontawesome-free/css/all.min.css";
+
 @import 'helpers/init';
 @import 'helpers/common';
 @import 'helpers/mixins';
