--- a/Modules/Front/Resources/assets/sass/layout.scss
+++ b/Modules/Front/Resources/assets/sass/layout.scss
@@ -114,7 +114,8 @@ footer{
   background-color: $sidebar-background-color;
   @include font(16,21,400);
   padding:8px 0px 8px;
-  height: calc(100vh - 174px);
+  height: 100%;
+  min-height: calc(100vh - 174px);
   @extend .animate;
   &.collapsed{
     width:0px;
@@ -250,13 +251,15 @@ body {
   .content-wrapper{
     position: relative;
     margin-left: 230px;
+    padding-bottom: 80px;
     &.collapsed{
       margin-left:100px;
     }
   }
   .sidebar{
     width:230px;
-    height: calc(100vh - 112px);
+    height: 100%;
+    min-height: calc(100vh - 112px);
     &.collapsed{
       width:100px;
     }
