--- a/public/modules/front/css/app.css
+++ b/public/modules/front/css/app.css
@@ -10046,7 +10046,8 @@ footer p {
   line-height: 21px;
   font-weight: 400;
   padding: 8px 0px 8px;
-  height: calc(100vh - 174px);
+  height: 100%;
+  min-height: calc(100vh - 174px);
 }
 
 .sidebar.collapsed {
@@ -10187,6 +10188,7 @@ body {
   .content-wrapper {
     position: relative;
     margin-left: 230px;
+    padding-bottom: 80px;
   }
 
   .content-wrapper.collapsed {
@@ -10195,7 +10197,8 @@ body {
 
   .sidebar {
     width: 230px;
-    height: calc(100vh - 112px);
+    height: 100%;
+    min-height: calc(100vh - 112px);
   }
 
   .sidebar.collapsed {
@@ -10460,7 +10463,7 @@ form.contact-form .checkbox {
 }
 
 .login-container {
-  padding: 45px 20px;
+  padding: 45px 20px 80px;
 }
 
 .login-container .icons {
