--- a/Modules/Front/Resources/assets/sass/_elementFiles.scss
+++ b/Modules/Front/Resources/assets/sass/_elementFiles.scss
@@ -7,6 +7,7 @@
     padding:10px 15px;
   }
   .element-file-container-body{
+    background-color: $elements-background-color;
     border: 1px solid $element-file-border;
     padding:10px 20px;
     .element-file-input-container{
@@ -23,5 +24,28 @@
         padding:0;
       }
     }
+  }
+}
+.element-collapsable{
+  cursor: pointer;
+  &.collapsed{
+    &:before{
+      content: "\25B8";
+      margin-right: 0px;
+      position: absolute;
+      top: 9px;
+      right: 19px;
+      font-size: 18px;
+      color: $primary-color;
+    }
+  }
+  &:before{
+    content: "\25BE";
+    margin-right: 0px;
+    position: absolute;
+    top: 9px;
+    right: 19px;
+    font-size: 18px;
+    color: $primary-color;
   }
 }
