--- a/Modules/Front/Resources/assets/sass/_variables.scss
+++ b/Modules/Front/Resources/assets/sass/_variables.scss
@@ -59,5 +59,5 @@ $secondary-color:#E84B37;
 //Element file
 $element-file-border:#E0E0E0;
 
-//Element form
-$element-form-background: #fff;
+//Element
+$elements-background-color: #fff;
