--- a/public/modules/front/css/app.css
+++ b/public/modules/front/css/app.css
@@ -10071,6 +10071,10 @@ footer p {
   margin-left: 8px;
 }
 
+.sidebar.initial {
+  width: 0px !important;
+}
+
 .sidebar ul {
   margin: 0px;
   padding: 0px;
@@ -10206,6 +10210,10 @@ body {
 
   .sidebar.collapsed {
     width: 100px;
+  }
+
+  .sidebar.initial {
+    width: 230px !important;
   }
 }
 
