--- a/public/modules/architect/css/app.css
+++ b/public/modules/architect/css/app.css
@@ -17235,7 +17235,7 @@ nav.main-nav ul li a:hover {
 .leftbar-page .sidebar ul li:hover a,
 .leftbar-page .sidebar ul li.active a {
   background-color: #bcbcbc;
-  border-left: 3px solid #fe0401;
+  border-left: 3px solid #E84B37;
 }
 
 .leftbar-page .sidebar ul li:hover a i,
