--- a/Modules/Front/Resources/assets/sass/app.scss
+++ b/Modules/Front/Resources/assets/sass/app.scss
@@ -5,7 +5,7 @@
 @import "fonts";
 @import "variables";
 
-@import '~leaflet/dist/leaflet.css';
+//@import '~leaflet/dist/leaflet.css';
 
 // Bootstrap
 @import "~bootstrap-sass/assets/stylesheets/bootstrap";
