--- a/Modules/Front/Resources/assets/sass/_elementTables.scss
+++ b/Modules/Front/Resources/assets/sass/_elementTables.scss
@@ -13,10 +13,10 @@
 .react-grid-Grid>div{
       position: initial;
 }
-
+/*
 .noHeaderWrapper .react-grid-Header {
   display: none !important;
 }
 .noHeaderWrapper  .react-grid-Viewport {
   top: 0px !important;
-}
+}*/
