push paginator without Css

--- a/Modules/Front/Resources/assets/sass/_elementTables.scss
+++ b/Modules/Front/Resources/assets/sass/_elementTables.scss
@@ -29,7 +29,7 @@
     .excel-btn{
       float:right;
       overflow: hidden;
-      button{
+      a{
         margin:10px 0;
         padding:7px 20px;
         text-decoration: none;
