--- a/public/modules/front/css/app.css
+++ b/public/modules/front/css/app.css
@@ -9385,6 +9385,31 @@ footer p {
   display: inline;
 }
 
+footer ul {
+  list-style-type: none;
+  text-align: center;
+}
+
+footer ul li {
+  display: inline;
+  color: #fff;
+  font-size: 16px;
+  line-height: 18px;
+  font-weight: 400;
+}
+
+footer ul li a {
+  color: #fff;
+  font-size: 16px;
+  line-height: 18px;
+  font-weight: 400;
+}
+
+footer ul li a:hover {
+  text-decoration: none;
+  color: #fff;
+}
+
 .content-wrapper {
   position: relative;
   padding: 15px;
