new table and new widgets

--- a/Modules/Extranet/Resources/assets/sass/backend/backend-style.scss
+++ b/Modules/Extranet/Resources/assets/sass/backend/backend-style.scss
@@ -1,6 +1,4 @@
-
 // Fonts
-@import url(https://fonts.googleapis.com/css?family=Raleway:300,400,600);
 
 // Material Kit
 // https://www.creative-tim.com/product/material-kit
@@ -13,3 +11,4 @@
 
 @import 'settings';
 @import 'elements';
+@import 'table';
