--- a/public/modules/extranet/css/app.css
+++ b/public/modules/extranet/css/app.css
@@ -176,6 +176,11 @@ li.react-autosuggest__suggestion span {
   padding: 6px 20px;
 }
 
+.ReactTable .rt-thead .rt-th.-cursor-pointer,
+.ReactTable .rt-thead .rt-td.-cursor-pointer {
+  background-color: #f00 !important;
+}
+
 .sitelist .medias-dropfiles {
   border: 2px dotted #dcdcdc;
   padding: 30px 50px;
