--- a/public/modules/front/css/app.css
+++ b/public/modules/front/css/app.css
@@ -9934,6 +9934,7 @@ form.contact-form .checkbox {
   font-weight: 400;
   text-transform: uppercase;
   padding: 10px 15px;
+  min-height: 41px;
 }
 
 .element-file-container .element-file-container-body {
@@ -9989,7 +9990,9 @@ form.contact-form .checkbox {
 
 .more-btn {
   text-align: right;
-  margin: 15px 0px;
+  padding: 15px;
+  padding-right: 0;
+  background-color: #fff;
 }
 
 .more-btn a {
@@ -10070,11 +10073,17 @@ form.contact-form .checkbox {
   font-weight: 400;
   text-transform: uppercase;
   padding: 10px 15px;
+  min-height: 41px;
 }
 
 .element-table-container .elementTable {
   padding: 20px;
   background-color: white;
+}
+
+.element-table-container .more-btn {
+  padding: 20px;
+  padding-top: 0px;
 }
 
 .title {
@@ -10171,22 +10180,6 @@ form.contact-form .checkbox {
   border-right: none;
   border-left: none;
 }
-
-.elementTableNoHeader .react-grid-Container .react-grid-Main .react-grid-Grid .react-grid-Header .react-grid-HeaderRow:first-of-type {
-  background-color: #E8E8E8;
-}
-
-.elementTableNoHeader .react-grid-Container .react-grid-Main .react-grid-Grid .react-grid-Header .react-grid-HeaderRow:first-of-type .react-grid-HeaderCell {
-  background-color: #E8E8E8;
-}
-
-/*
-.noHeaderWrapper .react-grid-Header {
-  display: none !important;
-}
-.noHeaderWrapper  .react-grid-Viewport {
-  top: 0px !important;
-}*/
 
 .map-container .leaflet-container {
   height: 300px;
