--- a/Modules/Front/Resources/assets/sass/_variables.scss
+++ b/Modules/Front/Resources/assets/sass/_variables.scss
@@ -2,7 +2,7 @@
 $assetPath : "/images";
 
 // Body
-$body-bg: #F7F7F7;
+$body-bg: #e7eaef;
 
 // Borders
 $laravel-border-color: darken($body-bg, 10%);
@@ -36,12 +36,12 @@ $header-right-part-background-color : #1B3A6A;
 $header-right-part-text-color: #fff;
 
 //footer
-$footer-background-color : #A8A8A8;
-$footer-text-color: #fff;
+$footer-background-color : #e7eaef;
+$footer-text-color: $brand-dark-color-1;
 
 //SIDEBAR
-$sidebar-background-color : #E8E8E8;
-$sidebar-active-background-color : #F7F7F7;
+$sidebar-background-color : #fff;
+$sidebar-active-background-color : #fff;
 
 //separator
 $separator-line-color: rgba(42, 54, 73, 0.22);
@@ -51,13 +51,19 @@ $separator-line-color: rgba(42, 54, 73, 0.22);
 $login-background-color: #FFFFFF;
 $login-border-color: #DBDBDB;
 
+//Buttons
+
 //buttons for primary-btn:hover, secondary btn,
 $primary-color:#2A3649;
 //buttons for primary-btn, hover on other btn, hover on texts...
 $secondary-color:#E84B37;
+$button-radius: 20px;
 
 //Element file
 $element-file-border:#E0E0E0;
 
 //Element
 $elements-background-color: #fff;
+
+//Tables
+$row-background: #f7f8f9;
