--- a/Modules/Front/Resources/assets/sass/layout.scss
+++ b/Modules/Front/Resources/assets/sass/layout.scss
@@ -43,6 +43,8 @@ header{
                   color:$header-right-part-text-color;
                   background-color: transparent;
                   text-transform: none;
+                  @include round($button-radius);
+
                   &:hover{
                     border:1px solid $secondary-color;
                     color:$secondary-color;
@@ -82,10 +84,13 @@ footer{
   background-color: $footer-background-color;
   text-align: center;
   padding:15px;
+  padding-right:30px;
   position: absolute;
   bottom: 0;
   right: 0;
   left: 0;
+  border-top:1px solid $separator-line-color;
+
 
   p{
     color:$footer-text-color;
@@ -95,16 +100,16 @@ footer{
   }
   ul{
     list-style-type: none;
-    text-align: center;
+    text-align: right;
     li{
       display:inline;
       color:$footer-text-color;
-      @include font(16,18,400);
+      @include font(12,18,400);
       a{
         color:$footer-text-color;
-        @include font(16,18,400);
+        @include font(12,18,400);
         &:hover{
-          text-decoration: none;
+          text-decoration: underline;
           color:$footer-text-color;
         }
       }
@@ -188,6 +193,7 @@ footer{
 }
 .breadcrumb{
   border-bottom: 1px solid $separator-line-color;
+  background-color: $body-bg;
   .container{
     padding-left:0;
     @include font(12,16,400);
@@ -279,7 +285,7 @@ body {
   .sidebar{
     width:230px;
     height: 100%;
-    min-height: calc(100vh - 112px);
+    min-height: calc(100vh - 62px);
     &.collapsed{
       width:100px;
     }
