--- a/Modules/Front/Resources/assets/sass/_variables.scss
+++ b/Modules/Front/Resources/assets/sass/_variables.scss
@@ -64,6 +64,8 @@ $element-file-border:#E0E0E0;
 
 //Element
 $elements-background-color: #fff;
+$elements-radius:12px;
 
 //Tables
 $row-background: #f7f8f9;
+$table-header-color: #868d97;
