routes settings finished

--- a/Modules/Architect/Resources/assets/sass/architect/app.scss
+++ b/Modules/Architect/Resources/assets/sass/architect/app.scss
@@ -35,6 +35,7 @@
 @import 'form';
 @import 'map';
 @import 'dashboard';
+@import 'list-items';
 
 @import 'content/content';
 @import 'content/page-builder';
