--- a/public/modules/architect/css/app.css
+++ b/public/modules/architect/css/app.css
@@ -14839,7 +14839,7 @@ nav.main-nav ul li.active a {
   position: absolute;
   top: 0px;
   right: 0px;
-  width: 180px;
+  width: 190px;
 }
 
 .rightbar-page .page-content .typology-field .field-actions a {
@@ -14979,72 +14979,6 @@ nav.main-nav ul li.active a {
 
 .leftbar-page .page-content .fields-list-container.is-active .list-container-content {
   color: #5b9fef;
-}
-
-.leftbar-page .page-content .typology-field {
-  border: 1px solid #ccc;
-  position: relative;
-  height: 50px;
-  overflow: hidden;
-  margin-bottom: 15px;
-  background-color: #fafafa;
-  border-radius: 6px;
-}
-
-.leftbar-page .page-content .typology-field .form-group .form-control,
-.leftbar-page .page-content .typology-field .form-group .cke_textarea_inline,
-.leftbar-page .page-content .typology-field .form-group .cke_textarea_inline {
-  border-top: none;
-  border-left: none;
-  border-right: none;
-  padding: 0 10px;
-}
-
-.leftbar-page .page-content .typology-field .field-type {
-  display: inline-block;
-  width: 150px;
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  font-size: 14px;
-  line-height: 50px;
-  font-weight: 500;
-  padding-left: 45px;
-  border-right: 1px solid #ccc;
-}
-
-.leftbar-page .page-content .typology-field .field-type i.fa {
-  position: absolute;
-  top: 12px;
-  left: 18px;
-  font-size: 22px;
-  padding-right: 10px;
-  color: #b4b4b4;
-}
-
-.leftbar-page .page-content .typology-field .field-inputs {
-  position: relative;
-  padding-left: 160px;
-  padding-right: 200px;
-  padding-top: 2px;
-}
-
-.leftbar-page .page-content .typology-field .remove-field-btn {
-  color: #fc4b6c;
-}
-
-.leftbar-page .page-content .typology-field .field-actions {
-  position: absolute;
-  top: 0px;
-  right: 0px;
-  width: 180px;
-}
-
-.leftbar-page .page-content .typology-field .field-actions a {
-  font-size: 12px;
-  line-height: 50px;
-  font-weight: 400;
-  display: inline-block;
 }
 
 .leftbar-page .sidebar {
@@ -16190,6 +16124,95 @@ line.links {
 .node text {
   font-family: 'Open Sans';
   font-weight: 100;
+}
+
+.setup-field-config.settings-field .form-group {
+  padding-left: 0;
+}
+
+.btn-parameters {
+  margin: 0;
+  padding: 8px 20px;
+}
+
+.add-content-button {
+  border: 1px dashed #ccc;
+  padding: 0 20px;
+  margin-left: 20px;
+  text-align: center;
+  margin-right: 20px;
+}
+
+.typology-field {
+  border: 1px solid #ccc;
+  position: relative;
+  height: 50px;
+  overflow: hidden;
+  margin-bottom: 15px;
+  background-color: #fafafa;
+  border-radius: 6px;
+}
+
+.typology-field .form-group .form-control,
+.typology-field .form-group .cke_textarea_inline,
+.typology-field .form-group .cke_textarea_inline {
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  padding: 0 10px;
+}
+
+.typology-field .field-type {
+  display: inline-block;
+  width: 150px;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  font-size: 14px;
+  line-height: 50px;
+  font-weight: 500;
+  padding-left: 45px;
+  border-right: 1px solid #ccc;
+}
+
+.typology-field .field-type i.fa {
+  position: absolute;
+  top: 12px;
+  left: 18px;
+  font-size: 22px;
+  padding-right: 10px;
+  color: #b4b4b4;
+}
+
+.typology-field .field-inputs {
+  position: relative;
+  padding-left: 160px;
+  padding-right: 200px;
+  padding-top: 2px;
+}
+
+.typology-field .field-inputs .field-name {
+  line-height: 45px;
+}
+
+.typology-field .remove-field-btn {
+  color: #fc4b6c;
+}
+
+.typology-field .field-actions {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  width: 180px;
+  text-align: right;
+  padding-right: 5px;
+}
+
+.typology-field .field-actions a {
+  font-size: 12px;
+  line-height: 50px;
+  font-weight: 400;
+  display: inline-block;
 }
 
 .content {
